Opened 16 years ago

Closed 16 years ago

#3422 closed bug (fixed)

Expander does not error when expanding to read-only filesystem

Reported by: mmadia Owned by: korli
Priority: normal Milestone: R1
Component: Applications/Expander Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When trying to expand an archive to a read-only filesystem, Expander will politely sit around waiting for the user to realize what is going on.

At no time will expander raise an error or crash. It'll just sit there, "Expanding ...".

This might be related to #1870, where Expander is unaware that unzip is waiting for user input. I have not yet investigated this.

Change History (1)

comment:1 by korli, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev29195. The destination is checked and an alert is raised if it's read only.

Note: See TracTickets for help on using tickets.